--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "@chubbyjs/chubbyjs-framework": "git+https://github.com/chubbyjs/chubbyjs-framework.git",
     "@chubbyjs/psr-http-message": "^1.2.1",
     "@types/node": "^12",
-    "path-to-regexp": "^6.2.0"
+    "@types/qs": "^6.9.7",
+    "path-to-regexp": "^6.2.0",
+    "qs": "^6.10.1"
   },
   "devDependencies": {
     "@chubbyjs/chubbyjs-mock": "^1.1.1",
