--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "node": ">=12"
   },
   "dependencies": {
-    "@chubbyjs/chubbyjs-framework": "git+https://github.com/chubbyjs/chubbyjs-framework.git",
+    "@chubbyjs/chubbyjs-framework": "^1.0.0",
     "@chubbyjs/psr-http-message": "^1.2.1",
     "@types/node": "^12",
     "@types/qs": "^6.9.7",
